--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,25 @@
 extends layout
 
 block content
-  each product in products 
-    h1=product.name
+    br
+    .container 
+      a(href="/add").btn.btn-primary(style="float:right") Add Product 
+      br
+    br
+    table.table.table-hover 
+      thead.table-dark 
+        tr 
+          th Name
+          th Description
+          th Price
+          th Rating
+          th Cart
+      tbody 
+        each product in products 
+          tr 
+            td=product.name
+            td=product.description
+            td=product.price
+            td=product.rating
+            td 
+              a(href="/cart/"+product._id).btn.btn-primary Add to Cart 
