--- a/views/others/navbar.pug
+++ b/views/others/navbar.pug
@@ -13,14 +13,16 @@
         <a class="nav-link" aria-current="page" href="/cart">My Cart</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="/users/signup">SignUp</a>
-        </li>
-        <li class="nav-item" >
-        <a class="nav-link" aria-current="page" href="/users/login">Login</a>
-        </li>
-        if user 
+        if !user
+            <a class="nav-link" aria-current="page" href="/users/signup">SignUp</a>
+            </li>
             <li class="nav-item" >
-            <a class="nav-link" aria-current="page" href="/users/logout">logout</a>
+            <a class="nav-link" aria-current="page" href="/users/login">Login</a>
+            </li>
+        if user 
+
+            <li class="nav-item float-right" >
+                <a class="nav-link" aria-current="page" href="/users/logout" >logout</a>
             </li>
     </ul>
     </div>
