--- a/views/index.pug
+++ b/views/index.pug
@@ -25,7 +25,7 @@ block content
               while n<=4
                 if product.rating-1>=n
                   span 
-                    i.fa.fa-star(style="color:yellow")
+                    i.fa.fa-star(style="color:blue")
                 else
                   span 
                     i.fa.fa-star
