--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
       a(href="/add").btn.btn-primary(style="float:right") Add Product 
       br
     br
-    table.table.table-hover 
+    table.table
       thead.table-dark 
         tr 
           th Name
